--- a/network_sim/config.ini
+++ b/network_sim/config.ini
@@ -22,18 +22,18 @@ MAX_PACKETS_QUEUED=1000
 
 # Drops and Reordering
 DROP_MODEL=1
-RANDOM_DROP_PROBABILITY=0.01
+RANDOM_DROP_PROBABILITY=0.05
 # Set this to 2 for Dynamic Drops
 # for values between [0, 1) that probability is applied
 
-REORDER_PROBABILITY=0.0
+REORDER_PROBABILITY=0.05
 
 # =====================================================================================================================
 # NODES
 # =====================================================================================================================
 [nodes]
 config_headers=sender,receiver
-file_to_send=./to_send_small.txt
+file_to_send=./network_sim/encrypted.txt
 
 [sender]
 id=1
